base/7-network-policy/5-api-gateway-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-netpol
spec:
  egress:
  - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-dns
        podSelector:
          matchLabels:
            dns.operator.openshift.io/daemonset-dns: default
    ports:
      - port: 5353
        protocol: UDP
  - ports:
    - port: 8089
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: backoffice-be
  - ports:
    - port: 8081
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: payment-gateway
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ui
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: k6
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
  - Ingress
  - Egress
