base/7-network-policy/8-k6-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k6-netpol
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-ingress
      podSelector:
        matchLabels:
          ingresscontroller.operator.openshift.io/deployment-ingresscontroller: default
    ports:
    - port: 5665
      protocol: TCP
  egress:
  - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-dns
        podSelector:
          matchLabels:
            dns.operator.openshift.io/daemonset-dns: default
    ports:
      - port: 5353
        protocol: UDP
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: api-gateway
  podSelector:
    matchLabels:
      app: k6
  policyTypes:
  - Ingress
  - Egress
